--- a/Wahlbekanntmachung.tex
+++ b/Wahlbekanntmachung.tex
@@ -5,26 +5,37 @@
 \usepackage{lmodern}
 \usepackage[ngerman]{babel}
 \usepackage{geometry}
-\geometry{a4paper,left=20mm,right=20mm, top=0cm, bottom=2cm} 
-\def\fach{Mathematik}
-\def\wahlvvDatum{21.06.2010}
-\def\wahlvvUhr{12:30}
-\def\wahlvvSaal{5E}
-\def\buero{Fachschaftsraum Mathematik, 25.22.U1.25}
-\def\raum{25.22.U1.25}
-\def\zeit{4. - 6. Juli 2011}
-\def\einsichtStart{20. Juni}
-\def\einsichtEnde{26. Juni}
+\geometry{a4paper,left=20mm,right=20mm, top=0cm, bottom=1.5cm} 
+
+\def\fach{Physik}
+
+
+\def\einsichtStart{16.05.2012}
+\def\einsichtEnde{22.05.2012}
+
+\def\wahlvvDatum{22.05.2012}
+\def\wahlvvUhr{14:30 Uhr}
+\def\wahlvvSaal{5K}
+
+\def\buero{Fachschaft Mathematik, 25.22.U1.25}
+\def\wahlanfang{30.05.2012}
+\def\wahlende{01.06.2012}
 \def\ort{ist vor der MatNatFak Bibliothek}
-\def\maxWahl{9}
-\def\wahlleiter{Evgeni Golov}
-\def\wahlpersonzwei{Jessica Hub}
-\def\wahlpersondrei{Mathis Fricke}
-\def\briefwahlAntrag{27. Juni}
-\def\briefwahlEnde{06. Juli 15:00 Uhr}
-\def\auszaehlung{Mittwoch den 06. Juli ab 15 Uhr}
+
+\def\maxWahl{11}
+
+\def\wahlleiter{Sergej Poplavski}
+\def\wahlpersonzwei{Janine Haas}
+\def\wahlpersondrei{Andreas Troll}
+
+\def\briefwahlAntrag{23.05.2012}
+\def\briefwahlEnde{01.06.2012, 14:15 Uhr}
+
+\def\auszaehlung{01.06.2012, 14:15 Uhr}
+
+
 \title{Wahlbekanntmachung}
-\subtitle{für die Wahl zum Fachschaftsrat \fach \\ in der Zeit vom \zeit}
+\subtitle{für die Wahl zum Fachschaftsrat \fach \\ in der Zeit vom \wahlanfang ~- \wahlende}
 \parindent 0pt
 \parskip 10pt
 \date{}
@@ -34,9 +45,9 @@
 \renewcommand{\titlepagestyle}{empty}
 \vspace{-0.5cm}
 \maketitle
-\vspace{-2cm}
-Vom \zeit~wird ein neuer Fachschaftsrat \fach~gewählt. Wahlberechtigt und wählbar sind alle Studierenden der Fachschaft \fach.
-Alle diese Studierenden sind im Wählerverzeichnis aufgeführt, welches vom \einsichtStart~bis zum \einsichtEnde~im Studierendensekretariat zur Einsichtnahme ausliegt. Einsprüche gegen die Richtigkeit des Wählerverzeichnises können beim Wahlleiter bis zum \einsichtEnde~schriftlich erklärt werden. Über den Einspruch entscheidet dann der Wahlausschuss. Ist ein Studierender nicht im Wählerverzeichnis, aber er hat keinen Einspruch erhoben, so obliegt ihm der Nachweis seiner Wahlberechtigung, dafür ist ein gültige Immatrikalitionsbescheinigung und ein gültiger Lichtbildausweis ausreichend.
+\vspace{-5\baselineskip}
+Vom \wahlanfang ~bis zum \wahlende ~wird ein neuer Fachschaftsrat \fach ~gewählt. Wahlberechtigt und wählbar sind alle Studierenden der Fachschaft \fach.
+Alle diese Studierenden sind im Wählerverzeichnis aufgeführt, welches vom \einsichtStart ~bis zum \einsichtEnde ~im Studierendensekretariat zur Einsichtnahme ausliegt. Einsprüche gegen die Richtigkeit des Wählerverzeichnises können beim Wahlleiter bis zum \einsichtEnde ~schriftlich erklärt werden. Über den Einspruch entscheidet dann der Wahlausschuss. Ist ein Studierender nicht im Wählerverzeichnis, aber er hat keinen Einspruch erhoben, so obliegt ihm der Nachweis seiner Wahlberechtigung, dafür ist ein gültige Immatrikalitionsbescheinigung und ein gültiger Lichtbildausweis ausreichend.
 
 Stand der Wahlurne \ort.
 
@@ -44,41 +55,38 @@ Es ist zu jeder Zeit eine Wahl ohne Studierendenausweis möglich, ausgenommen si
 
 Gewählt wird zu folgenden Zeiten:
 \begin{itemize}
-\item Montag den 04. Juli 11:30 Uhr – 16:00 Uhr
-\item Dienstag den 05. Juli 10:00 Uhr – 15:00 Uhr
-\item Mittwoch den 06. Juli 11:30 Uhr – 14:00 Uhr 
-\item Mittwoch den 06. Juli 14:00 Uhr – 15:00 Uhr im Wahlbüro (\buero) 
+\item Mittwoch, den 30. Mai 11:15 Uhr – 14:15 Uhr
+\item Donnerstag, den 31. Mai 09:15 Uhr – 13:15 Uhr
+\item Freitag, den 01. Juni 12:15 Uhr – 14:15 Uhr 
+
 \end{itemize}
 
-Gewählt werden können bis zu \maxWahl~Mitglieder.
+Gewählt werden voraussichtlich bis zu \maxWahl ~Mitglieder (nach den Zahlen des Wintersemesters 2011/12).
 
-\subsection*{Wahlsystem}
-Jeder Wahlberechtigte hat so viele Stimmen, wie Kandidaten zur Wahl stehen, jedoch nicht mehr als neun, da dies die maximale Anzahl an Mitgliedern ist. Jedem Kandidaten darf maximal eine Stimme gegeben werden. Eine Stimmhäufung ist nicht möglich. 
+\textbf{Wahlsystem}
 
-Wahlzettel mit mehr Stimmen als Kandidaten, mehr als neun Stimmen, Stimmhäufung oder bei denen der Wille des Wählers nicht eindeutig erkennbar ist, werden als ungültig gewertet.
+Jeder Wahlberechtigte kann f"ur jeden Kandidaten eine positive (Ja) oder eine negative Stimme (Nein) abgeben. Desweiteren besteht die M"oglichkeit der Enthaltung (Kreuz bei Enthaltung oder kein Kreuz). Es sind also maximal so viele Kreuze zu setzen, wie Kandidaten zur Wahl stehen, jedoch auf keinen Kandidaten mehr als ein Kreuz.
 
-Hat ein Kandidat mehr als 50\% der abgegebenen, gültigen Stimmen, so gilt er als gewählt. Gibt es mehr als 9 gewählte Kandidaten, so entscheidet die Reihenfolge der Kandidaten gemäß der erreichten Stimmenzahl. Bei Stimmengleichheit entscheidet das Los. Die Sitze werden den Kandidaten in der Reihenfolge der von ihnen erreichten Stimmenzahl zugeteilt.
+Wurde bei min. einem Kandidaten mehr als eine Stimme abgegeben, so ist der \textbf{Stimmzettel} ung\"ueltig. Ist der Wille des W\"ahlers nicht eindeuitg erkennbar, oder enth"alt die Stimme handschriftliche Zus"atze, so ist die \textbf{Stimme} ung"ultig.
 
-Die Wahlvollversammlung findet am \wahlvvDatum~um \wahlvvUhr~Uhr im Hörsaal \wahlvvSaal~statt.
+Gewählt sind die KandidatInnen, bei denen die Differenz der Positiv- und Negativstimmen größer oder gleich eins (>=1) ist. 
+Ist die Zahl der gewählten KandidatInnen größer als die Zahl der zu vergebenden Sitze, so wird eine Reihung unter diesen KandidatInnen gemäß der erreichten Differenz vorgenommen. 
+Bei Differenzgleichheit werden die KandidatInnen mit absolut weniger Negativstimmen vorgezogen. Bei identischer Anzahl an Negativstimmen entscheidet das Los über den Rang. 
+Die Sitze werden den KandidatInnen in der Reihenfolge der von ihnen erreichten Differenz zugeteilt.
 
-Wahlvorschläge können bis zum Abschluss des Tagesordnungspunktes ``Nominierung, Vorstellung und Befragung der Kandidaten zur Wahl des Fachschaftsrates'' auf der Wahlvollversammlung abgegeben werden. 
 
-Bis zum \briefwahlAntrag~können beim Wahlausschuss schriftlich Briefwahlunterlagen beantragt werden. Die Briefwahlstimme muss bis spätestens \briefwahlEnde~beim Wahlleiter eingegangen sein.
+Die \textbf{Wahlvollversammlung} findet am \wahlvvDatum ~um \wahlvvUhr ~Uhr im Hörsaal \wahlvvSaal ~statt.
 
-Wahlvorschläge können jederzeit an Mitglieder des Wahlausschusses gegeben werden. Sie sind mindestens während ihrer Öffnungszeiten im Raum der Fachschaft anzutreffen.
+Wahlvorschläge können immer beim Wahlleiter (\wahlleiter ), insbesondere auf der Wahlvollversammlung bis zum Abschluss des Tagesordnungspunktes ``Nominierung, Vorstellung und Befragung der Kandidaten zur Wahl des Fachschaftsrates'' abgegeben werden. 
 
-Ausgezählt wird am \auszaehlung~im \buero.
+Bis zum \briefwahlAntrag ~können beim Wahlausschuss schriftlich Briefwahlunterlagen beantragt werden. Die Briefwahl\-stimme muss bis spätestens \briefwahlEnde beim Wahlleiter eingegangen sein.
 
-\vspace{1em}
+Die Stimmen werden im Anschluss an die Wahl am \auszaehlung ~in der ~\buero \phantom{.} ausgez"ahlt.
 
-Düsseldorf den \today
 
-\vspace{1em}
+Düsseldorf, den \today
 
-\begin{center}
-\begin{tabular}{lll}
-\wahlleiter \hspace{2cm} & \wahlpersonzwei & \hspace{2cm} \wahlpersondrei \\
-(Wahlleiter) & & 
-\end{tabular}
-\end{center}
+\vspace{2\baselineskip}
+
+\wahlleiter
 \end{document}
