--- a/Wahlvorschlag.tex
+++ b/Wahlvorschlag.tex
@@ -7,11 +7,12 @@
 \usepackage{geometry}
 \usepackage{tabularx}
 \geometry{a4paper,left=20mm,right=20mm, top=1cm, bottom=4cm} 
+
 \def\fach{Mathematik}
-\def\wahlvvDatum{21.06.2010}
-\def\wahlvvUhr{12:30}
-\def\wahlvvSaal{5E}
-\def\zeit{4. - 6. Juli 2011}
+\def\wahlvvDatum{22.05.2010}
+\def\wahlvvUhr{14:30}
+\def\wahlvvSaal{25.22.U1.72}
+\def\zeit{30. Mai - 1. Juni 2011}
 
 \parindent 0pt
 \parskip 10pt
@@ -47,9 +48,7 @@ Hiermit erkläre ich, dass ich mit meiner Kandidatur einverstanden bin.
 \underline{\hspace{10cm}}\\
 Ort, Datum, Unterschrift
 
-Beim Wahlausschuss einzureichen bis spätestens zum Ende des Tagesordnungspunktes:
+Bei der Wahlleitung (Andreas Troll) einzureichen bis spätestens zum Ende des Tagesordnungspunktes:
 ``Nominierung, Vorstellung und Befragung der Kandidaten zur Wahl des Fachschaftsrates'' auf
-der Wahlvollversammlung vom \wahlvvDatum.
-Kann bis zum Anfang der Vollversammlung in des entsprechende Fach in der Fachschaft Informatik
-(gekennzeichnet mit ``Wahlvorschläge'') gelegt werden.
+der Wahlvollversammlung am \wahlvvDatum.
 \end{document}
