Datum auf wahlvorschlag aktualisiert

--- a/Wahlvorschlag.tex
+++ b/Wahlvorschlag.tex
@@ -9,10 +9,11 @@
 \geometry{a4paper,left=20mm,right=20mm, top=1cm, bottom=4cm} 
 
 \def\fach{Mathematik}
-\def\wahlvvDatum{22.05.2010}
+\def\wahlvvDatum{22.05.2012}
 \def\wahlvvUhr{14:30}
 \def\wahlvvSaal{25.22.U1.72}
-\def\zeit{30. Mai - 1. Juni 2011}
+\def\zeit{30. Mai - 1. Juni 2012}
+\def\wahlleiter{Janine Haas~}
 
 \parindent 0pt
 \parskip 10pt
@@ -38,17 +39,17 @@ Hiermit schlage ich folgende Person als Kandidat für die Wahl zum Fachschaftsra
 Name: & \underline{\hspace{10cm}} \vspace{0.5cm}\\
 Vorname:  & \underline{\hspace{10cm}} \vspace{0.5cm}\\
 Matrikelnummer: & \underline{\hspace{10cm}} \vspace{0.5cm}\\ 
-Straße:  & \underline{\hspace{10cm}} \vspace{0.5cm}\\
+Straße, Nr.:  & \underline{\hspace{10cm}} \vspace{0.5cm}\\
 PLZ und Ort: & \underline{\hspace{10cm}} \vspace{0.5cm}\\
 \end{tabularx}          
 Erklärung des vorgeschlagenen Kandidaten:\\
-Hiermit erkläre ich, dass ich mit meiner Kandidatur einverstanden bin.
+Hiermit erkl"are ich, dass ich mit meiner Wahl einverstanden w"are.
 \vspace{0.5cm}
 
 \underline{\hspace{10cm}}\\
 Ort, Datum, Unterschrift
 
-Bei der Wahlleitung (Andreas Troll) einzureichen bis spätestens zum Ende des Tagesordnungspunktes:
+Bei der Wahlleitung (\wahlleiter) einzureichen bis spätestens zum Ende des Tagesordnungspunktes:
 ``Nominierung, Vorstellung und Befragung der Kandidaten zur Wahl des Fachschaftsrates'' auf
 der Wahlvollversammlung am \wahlvvDatum.
 \end{document}
