Wahldokumente fuer die Wahlen 2012, finaler Stand.

--- a/Einladung_WahlVV.tex
+++ b/Einladung_WahlVV.tex
@@ -8,15 +8,17 @@
 
 \begin{document}
 \begin{center}
-\vspace*{8ex}
-\huge \textbf{Einladung zur Wahlvollversammlung Informatik}\\[2ex]
-\large{am}\\[2ex]
-\huge \textbf{22.05.2012 in 5C}\\[6ex]
+\thispagestyle{empty}
 
-\large
+\vspace*{8ex}
+\huge \textbf{EINLADUNG ZUR WAHLVOLLVERSAMMLUNG INFORMATIK}\\[2ex]
+\huge am \textbf{22.05.2012} um \textbf{14:30 Uhr}\\
+in \textbf{H"orsaal 5C}\\[6ex]
+
+\LARGE
 \begin{tabular}{rl}
 TOP 0: &Regularia\\
-TOP 1: &Nominierung, Vorstellung und Befragung der Kandidaten zur Wahl des Fachschaftsrates\\
+TOP 1: &Nominierung, Vorstellung und Befragung der Kandidaten zur Wahl\\ & des Fachschaftsrates\\
 TOP 2: &Kassenbericht\\
 TOP 3: &Weitere Berichte\\
 TOP 4: &Sonstiges
