--- a/Liste.tex
+++ b/Liste.tex
@@ -1,43 +1,44 @@
-\documentclass[a4paper,10pt]{scrartcl}
-%\documentclass[a4paper]{article}
-\usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
-\usepackage{lmodern}
-\usepackage[ngerman]{babel}
-\usepackage{geometry}
-\usepackage{tabularx}
-\geometry{a4paper,left=20mm,right=20mm, top=1cm, bottom=4cm} 
-\def\fach{Informatik}
-\def\wahlvvDatum{21.06.2010}
-\def\wahlvvUhr{12:30}
-\def\wahlvvSaal{5E}
-\def\zeit{4. - 6. Juli 2011}
+\input wahlheader.tex
 
 \parindent 0pt
 \parskip 10pt
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Titel                         %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \title{Liste der Kandidaten}
 \subtitle{für die Wahl zum Fachschaftsrat \fach \\ in der Zeit vom \zeit}
 \date{}
+
+
 \begin{document}
 \pagestyle{empty}
 \thispagestyle{empty}
 \renewcommand{\titlepagestyle}{empty}
 
 \maketitle
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Inhalt                        %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{center}
 \Huge
-Dietze, Jens\\
-Esken, Dennis\\
-Haas, Janine\\
-Horz, Daniel\\
-Hurek, Oscar\\
-Klages, Christina\\
-Knaup, Matthias\\
-Perrone, Gian\\
-Schlapa, Michael\\
-Schneider, Alexander\\
-\small
-(in alphabetischer Reihenfolge)
+\begin{itemize}
+\item Horz, Daniel
+\item Rehs, Philipp
+\item Rey, Lisa
+\item Hurek, Oscar
+\item Fanty, Dennis-Marco
+\item Schneider, Alexander
+\item H"ofges Philip
+\item Birkhoff, Michael
+\item Schmidt, Benjamin
+\item Klages, Christina
+\item Knaup, Matthias
+\item Schlapa, Michael
+\end{itemize}
+\huge
+(in zuf"alliger Reihenfolge)
 \end{center}
 \end{document}
