--- a/Wahlvorschlag.tex
+++ b/Wahlvorschlag.tex
@@ -1,31 +1,27 @@
-\documentclass[a4paper,10pt]{scrartcl}
-%\documentclass[a4paper]{article}
-\usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
-\usepackage{lmodern}
-\usepackage[ngerman]{babel}
-\usepackage{geometry}
-\usepackage{tabularx}
-\geometry{a4paper,left=20mm,right=20mm, top=1cm, bottom=4cm} 
+\input wahlheader.tex
 
-\def\fach{Mathematik}
-\def\wahlvvDatum{22.05.2012}
-\def\wahlvvUhr{14:30}
-\def\wahlvvSaal{25.22.U1.72}
-\def\zeit{30. Mai - 1. Juni 2012}
-\def\wahlleiter{Janine Haas~}
 
 \parindent 0pt
 \parskip 10pt
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Titel                         %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \title{Wahlvorschlag}
 \subtitle{für die Wahl zum Fachschaftsrat \fach \\ in der Zeit vom \zeit}
 \date{}
+
+
 \begin{document}
 \pagestyle{empty}
 \thispagestyle{empty}
 \renewcommand{\titlepagestyle}{empty}
 
 \maketitle
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Inhalt                        %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 Vorschlagender:
 \\
