--- a/wahlzettel.tex
+++ b/wahlzettel.tex
@@ -1,33 +1,16 @@
-\documentclass[a4paper,10pt]{scrartcl}
-%\documentclass[a4paper]{article}
-\usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
-\usepackage{lmodern}
-\usepackage[ngerman]{babel}
-\usepackage{geometry}
-\usepackage{tabularx}
-\usepackage{multirow}
-\usepackage{amssymb}
-\usepackage{graphicx}
-\usepackage{tabularx}
+\input wahlheader.tex
+
 \geometry{a4paper,left=20mm,right=20mm, top=1cm, bottom=1cm} 
-
-\def\fach{Informatik}
-
-\def\zeit{4. - 6. Juli 2011}
-
-
 
 \parindent 0pt
 \parskip 10pt
 
-
-\title{Stimmzettel \\ zur Wahl des Fachschaftsrats \fach \\ in der Zeit vom \zeit}
-\date{}
-\author{}
-
-
 \begin{document}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Titel                         %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \begin{center}
 \Huge \underline{Stimmzettel}
 \end{center}
@@ -38,51 +21,59 @@ zur Wahl des Fachschaftsrats \fach ~in der Zeit vom \zeit
 \LARGE
 \pagestyle{empty}
 \thispagestyle{empty}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Inhalt                        %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \begin{center}
 \begin{tabularx}{0.95\textwidth}{|clX||clX|}
 
   \hline
-  \multirow{5}{*}{\includegraphics[width=3.5cm]{testbild}} &  & & \multirow{5}{*}{\includegraphics[width=3.5cm]{testbild}} & & \\
+  \multirow{5}{*}{\includegraphics[width=2.5cm]{testbild}} &  & & \multirow{5}{*}{\includegraphics[width=2.5cm]{testbild}} & & \\
     &  $\square$ & Ja &  &$\square$ & Ja \\
     &  $\square$ & Enthaltung &  &$\square$ & Enthaltung \\
     & $\square$ & Nein\hspace{2cm} & & $\square$ & Nein\\
-    &&&&&\\
   \multicolumn{3}{|c||}{NAME} & \multicolumn{3}{|c|}{NAME} \\
 
   \hline\hline
   
-    \multirow{5}{*}{\includegraphics[width=3.5cm]{testbild}} &  & & \multirow{5}{*}{\includegraphics[width=3.5cm]{testbild}} & & \\
+    \multirow{5}{*}{\includegraphics[width=2.5cm]{testbild}} &  & & \multirow{5}{*}{\includegraphics[width=2.5cm]{testbild}} & & \\
     &  $\square$ & Ja &  &$\square$ & Ja \\
     &  $\square$ & Enthaltung &  &$\square$ & Enthaltung \\
     & $\square$ & Nein\hspace{2cm} & & $\square$ & Nein\\
-    &&&&&\\
   \multicolumn{3}{|c||}{NAME} & \multicolumn{3}{|c|}{NAME} \\
 
   \hline\hline
   
-    \multirow{5}{*}{\includegraphics[width=3.5cm]{testbild}} &  & & \multirow{5}{*}{\includegraphics[width=3.5cm]{testbild}} & & \\
+    \multirow{5}{*}{\includegraphics[width=2.5cm]{testbild}} &  & & \multirow{5}{*}{\includegraphics[width=2.5cm]{testbild}} & & \\
     &  $\square$ & Ja &  &$\square$ & Ja \\
     &  $\square$ & Enthaltung &  &$\square$ & Enthaltung \\
     & $\square$ & Nein\hspace{2cm} & & $\square$ & Nein\\
-    &&&&&\\
   \multicolumn{3}{|c||}{NAME} & \multicolumn{3}{|c|}{NAME} \\
 
   \hline\hline
   
-    \multirow{5}{*}{\includegraphics[width=3.5cm]{testbild}} &  & & \multirow{5}{*}{\includegraphics[width=3.5cm]{testbild}} & & \\
+    \multirow{5}{*}{\includegraphics[width=2.5cm]{testbild}} &  & & \multirow{5}{*}{\includegraphics[width=2.5cm]{testbild}} & & \\
     &  $\square$ & Ja &  &$\square$ & Ja \\
     &  $\square$ & Enthaltung &  &$\square$ & Enthaltung \\
     & $\square$ & Nein\hspace{2cm} & & $\square$ & Nein\\
-    &&&&&\\
   \multicolumn{3}{|c||}{NAME} & \multicolumn{3}{|c|}{NAME} \\
 
   \hline\hline
   
-      \multirow{5}{*}{\includegraphics[width=3.5cm]{testbild}} &  & & \multirow{5}{*}{\includegraphics[width=3.5cm]{testbild}} & & \\
+      \multirow{5}{*}{\includegraphics[width=2.5cm]{testbild}} &  & & \multirow{5}{*}{\includegraphics[width=2.5cm]{testbild}} & & \\
     &  $\square$ & Ja &  &$\square$ & Ja \\
     &  $\square$ & Enthaltung &  &$\square$ & Enthaltung \\
     & $\square$ & Nein\hspace{2cm} & & $\square$ & Nein\\
-    &&&&&\\
+  \multicolumn{3}{|c||}{NAME} & \multicolumn{3}{|c|}{NAME} \\
+  
+  \hline\hline
+  
+      \multirow{5}{*}{\includegraphics[width=2.5cm]{testbild}} &  & & \multirow{5}{*}{\includegraphics[width=2.5cm]{testbild}} & & \\
+    &  $\square$ & Ja &  &$\square$ & Ja \\
+    &  $\square$ & Enthaltung &  &$\square$ & Enthaltung \\
+    & $\square$ & Nein\hspace{2cm} & & $\square$ & Nein\\
   \multicolumn{3}{|c||}{NAME} & \multicolumn{3}{|c|}{NAME} \\
 
   \hline
