--- a/VorlaeufigeListe.tex
+++ b/VorlaeufigeListe.tex
@@ -1,21 +1,17 @@
-\documentclass[a4paper,10pt]{scrartcl}
-%\documentclass[a4paper]{article}
-\usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
-\usepackage{lmodern}
-\usepackage[ngerman]{babel}
-\usepackage{geometry}
-\usepackage{tabularx}
-\geometry{a4paper,left=20mm,right=20mm, top=1cm, bottom=4cm} 
-\def\fach{Informatik}
-\def\wahlvvDatum{21.06.2010}
-\def\wahlvvUhr{12:30}
-\def\wahlvvSaal{5E}
-\def\zeit{4. - 6. Juli 2011}
-\def\stand{17. Juni 2011, 10:00 Uhr}
+\input wahlheader.tex
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Daten                         %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\def\stand{\today}
 
 \parindent 0pt
 \parskip 10pt
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Titel                         %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \title{Vorläufige Liste der Kandidaten}
 \subtitle{für die Wahl zum Fachschaftsrat \fach \\ in der Zeit vom \zeit\\Stand: \stand}
 \date{}
@@ -25,19 +21,16 @@
 \renewcommand{\titlepagestyle}{empty}
 
 \maketitle
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Inhalt                        %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{center}
 \Huge
-Dietze, Jens\\
-Esken, Dennis\\
-Haas, Janine\\
-Horz, Daniel\\
-Hurek, Oscar\\
-Klages, Christina\\
-Knaup, Matthias\\
-Perrone, Gian\\
-Schlapa, Michael\\
-Schneider, Alexander\\
+\begin{itemize}
+  \item NAME
+\end{itemize}
+
 \small
 (in alphabetischer Reihenfolge)
 \end{center}
