--- a/Wahlbekanntmachung.tex
+++ b/Wahlbekanntmachung.tex
@@ -1,41 +1,13 @@
-\documentclass[a4paper,10pt]{scrartcl}
-%\documentclass[a4paper]{article}
-\usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
-\usepackage{lmodern}
-\usepackage[ngerman]{babel}
-\usepackage{geometry}
+\input wahlheader.tex
+
 \geometry{a4paper,left=20mm,right=20mm, top=0cm, bottom=1.5cm} 
 
-\def\fach{Physik}
-
-
-\def\einsichtStart{16.05.2012}
-\def\einsichtEnde{22.05.2012}
-
-\def\wahlvvDatum{22.05.2012}
-\def\wahlvvUhr{14:30 Uhr}
-\def\wahlvvSaal{5K}
-
-\def\buero{Fachschaft Mathematik, 25.22.U1.25}
-\def\wahlanfang{30.05.2012}
-\def\wahlende{01.06.2012}
-\def\ort{ist vor der MatNatFak Bibliothek}
-
-\def\maxWahl{11}
-
-\def\wahlleiter{Sergej Poplavski}
-\def\wahlpersonzwei{Janine Haas}
-\def\wahlpersondrei{Andreas Troll}
-
-\def\briefwahlAntrag{23.05.2012}
-\def\briefwahlEnde{01.06.2012, 14:15 Uhr}
-
-\def\auszaehlung{01.06.2012, 14:15 Uhr}
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Titel                         %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \title{Wahlbekanntmachung}
-\subtitle{für die Wahl zum Fachschaftsrat \fach \\ in der Zeit vom \wahlanfang ~- \wahlende}
+\subtitle{für die Wahl zum Fachschaftsrat \fach \\ in der Zeit vom \zeit}
 \parindent 0pt
 \parskip 10pt
 \date{}
@@ -45,8 +17,13 @@
 \renewcommand{\titlepagestyle}{empty}
 \vspace{-0.5cm}
 \maketitle
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Inhalt                        %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \vspace{-5\baselineskip}
-Vom \wahlanfang ~bis zum \wahlende ~wird ein neuer Fachschaftsrat \fach ~gewählt. Wahlberechtigt und wählbar sind alle Studierenden der Fachschaft \fach.
+Vom \zeit ~wird ein neuer Fachschaftsrat \fach ~gewählt. Wahlberechtigt und wählbar sind alle Studierenden der Fachschaft \fach.
 Alle diese Studierenden sind im Wählerverzeichnis aufgeführt, welches vom \einsichtStart ~bis zum \einsichtEnde ~im Studierendensekretariat zur Einsichtnahme ausliegt. Einsprüche gegen die Richtigkeit des Wählerverzeichnises können beim Wahlleiter bis zum \einsichtEnde ~schriftlich erklärt werden. Über den Einspruch entscheidet dann der Wahlausschuss. Ist ein Studierender nicht im Wählerverzeichnis, aber er hat keinen Einspruch erhoben, so obliegt ihm der Nachweis seiner Wahlberechtigung, dafür ist ein gültige Immatrikalitionsbescheinigung und ein gültiger Lichtbildausweis ausreichend.
 
 Stand der Wahlurne \ort.
